# Chromaticity

./: .gitignore  .travis.yml  README.md
graph_cases/: CMakeLists.txt  Makefile  graph_cases.cpp  local_types.h  math_utils.h  multipartite_graphs.cpp  multipartite_graphs.h
graph_cases/acyclic_orientations_calculator/: CMakeLists.txt  main.cpp
graph_cases/i4_invariant/: CMakeLists.txt  main.cpp
graph_cases/invariant_explorer/: CMakeLists.txt  main.cpp
graph_cases/lib/: CMakeLists.txt  math_utils.h  multipartite_graphs.cpp  multipartite_graphs.h
graph_cases/lib/autoindexer/: CMakeLists.txt  autoindexer.cpp  autoindexer.h
graph_cases/lib/binomial_coefficients/: CMakeLists.txt  binomial_coefficients.cpp  binomial_coefficients.h
graph_cases/lib/executer/: CMakeLists.txt  executer.cpp  executer.h  multithread_executer.cpp  multithread_executer.h  singlethread_exectuer.cpp  singlethread_exectuer.h
graph_cases/lib/factorial/: CMakeLists.txt  factorial.cpp  factorial.h
graph_cases/lib/math_utils/: CMakeLists.txt  combinatorics.cpp  combinatorics.h  policy.h  sigma.cpp  sigma.h  subsets.cpp  subsets.h  sum.h  traits.h
graph_cases/lib/multipartite_graphs/: CMakeLists.txt  acyclic_orintations.cpp  acyclic_orintations.h  graph.cpp  graph.h  multipartite_graphs.cpp  multipartite_graphs.h
graph_cases/lib/multithread_writer/: CMakeLists.txt  writer.cpp  writer.h
graph_cases/lib/optparser/: CMakeLists.txt  optparser.cpp  optparser.h
graph_cases/lib/queue/: CMakeLists.txt  queue.h
graph_cases/lib/singleton/: CMakeLists.txt  singleton.h
graph_cases/lib/test_system/: CMakeLists.txt  Makefile  test_system.cpp  test_system.h
graph_cases/lib/utils/: print.h
graph_cases/tests/: CMakeLists.txt  main.cpp  test_autoindexer.cpp  test_binomial_coefficients.cpp  test_combinatorics.cpp  test_executer.cpp  test_factorial.cpp  test_multipartite_graphs.cpp  test_optparser.cpp  test_queue.cpp  test_sigma.cpp  test_singleton.cpp  test_subsets.cpp  test_writer.cpp  utils.h
