CMAKE_MINIMUM_REQUIRED(VERSION 3.1) # Проверка версии CMake.

PROJECT(graph_cases)
SET(CMAKE_CXX_COMPILER "/usr/bin/clang++")
#SET(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -fsanitize=thread -fPIE -pie -g")
SET(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -O3")
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

INCLUDE_DIRECTORIES(lib)

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(bin)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(i4_invariant)

