ADD_SUBDIRECTORY(autoindexer)
ADD_SUBDIRECTORY(binomial_coefficients)
ADD_SUBDIRECTORY(executer)
ADD_SUBDIRECTORY(factorial)
ADD_SUBDIRECTORY(math_utils)
ADD_SUBDIRECTORY(multipartite_graphs)
ADD_SUBDIRECTORY(multithread_writer)
ADD_SUBDIRECTORY(optparser)
ADD_SUBDIRECTORY(queue)
ADD_SUBDIRECTORY(singleton)
ADD_SUBDIRECTORY(test_system)